--- a/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
+++ b/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
@@ -49,8 +49,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "I'm going to inject something here.\n"
      ]
@@ -59,6 +59,31 @@
    "source": [
     "print(\"I'm going to inject %s here.\" %'something')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "I am going to inject jared here\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'jared'\n",
+    "print(f'I am going to inject {name} here')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -716,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
