finished first assessment

--- a/00-Python Object and Data Structure Basics/08-Files.ipynb
+++ b/00-Python Object and Data Structure Basics/08-Files.ipynb
@@ -792,10 +792,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('abcd.txt',mode='w') as f:\n",
+    "    f.write('I created this file.')"
+   ]
   }
  ],
  "metadata": {
